// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cloud.Domain for tf-aws > react website with a domain when passing values from file 1`] = `
{
  "data": {
    "aws_iam_policy_document": {
      "Website_Website-host_AllowDistributionReadOnly_BEA9DA33": {
        "statement": [
          {
            "actions": [
              "s3:GetObject",
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "\${aws_cloudfront_distribution.Website_Website-host_Distribution_16BBCB7A.arn}",
                ],
                "variable": "AWS:SourceArn",
              },
            ],
            "principals": [
              {
                "identifiers": [
                  "cloudfront.amazonaws.com",
                ],
                "type": "Service",
              },
            ],
            "resources": [
              "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.arn}/*",
            ],
          },
        ],
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "Website_Website-host_Distribution_16BBCB7A": {
        "aliases": [
          "www.example.com",
        ],
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD",
          ],
          "cached_methods": [
            "GET",
            "HEAD",
          ],
          "compress": true,
          "default_ttl": 3600,
          "forwarded_values": {
            "cookies": {
              "forward": "none",
            },
            "query_string": false,
          },
          "max_ttl": 86400,
          "min_ttl": 0,
          "target_origin_id": "s3Origin",
          "viewer_protocol_policy": "redirect-to-https",
        },
        "default_root_object": "index.html",
        "enabled": true,
        "origin": [
          {
            "domain_name": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket_regional_domain_name}",
            "origin_access_control_id": "\${aws_cloudfront_origin_access_control.Website_Website-host_CloudfrontOac_E7FC4CB7.id}",
            "origin_id": "s3Origin",
          },
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [],
            "restriction_type": "none",
          },
        },
        "viewer_certificate": {
          "acm_certificate_arn": "arn:aws:acm:us-east-1:111111111111:certificate/aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
          "cloudfront_default_certificate": true,
          "ssl_support_method": "sni-only",
        },
      },
    },
    "aws_cloudfront_origin_access_control": {
      "Website_Website-host_CloudfrontOac_E7FC4CB7": {
        "name": "Website--c8d109e4-cloudfront-oac",
        "origin_access_control_origin_type": "s3",
        "signing_behavior": "always",
        "signing_protocol": "sigv4",
      },
    },
    "aws_route53_record": {
      "Website_Website-host_Route53Record_CC3DD5F0": {
        "alias": {
          "evaluate_target_health": false,
          "name": "\${aws_cloudfront_distribution.Website_Website-host_Distribution_16BBCB7A.domain_name}",
          "zone_id": "\${aws_cloudfront_distribution.Website_Website-host_Distribution_16BBCB7A.hosted_zone_id}",
        },
        "name": "www.example.com",
        "type": "A",
        "zone_id": "Z0111111111111111111F",
      },
    },
    "aws_s3_bucket": {
      "Website_Website-host_WebsiteBucket_0ECE7584": {
        "bucket_prefix": "website-host-c8d109e4-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "Website_Website-host_DistributionS3BucketPolicy_AE0CA9BB": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.id}",
        "policy": "\${data.aws_iam_policy_document.Website_Website-host_AllowDistributionReadOnly_BEA9DA33.json}",
      },
    },
    "aws_s3_bucket_website_configuration": {
      "Website_Website-host_BucketWebsiteConfiguration_6A151F57": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket}",
        "index_document": {
          "suffix": "index.html",
        },
      },
    },
    "aws_s3_object": {
      "Website_Website-host_File--indexhtml_7EB8DC7E": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584",
        ],
        "key": "/index.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_Website-host_File-wingjs_CC553473": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket}",
        "content": "// This file is generated by wing
window.wingEnv = {};",
        "content_type": "text/javascript",
        "depends_on": [
          "aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584",
        ],
        "key": "wing.js",
      },
    },
  },
}
`;

exports[`cloud.Domain for tf-aws > react website with a domain when passing values from file 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Domain": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud domain",
                  "title": "Domain",
                },
                "id": "Domain",
                "path": "root/Default/Domain",
              },
              "Website": {
                "children": {
                  "Website-host": {
                    "children": {
                      "AllowDistributionReadOnly": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformDataSource",
                          "version": "0.17.0",
                        },
                        "id": "AllowDistributionReadOnly",
                        "path": "root/Default/Website/Website-host/AllowDistributionReadOnly",
                      },
                      "BucketWebsiteConfiguration": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "BucketWebsiteConfiguration",
                        "path": "root/Default/Website/Website-host/BucketWebsiteConfiguration",
                      },
                      "CloudfrontOac": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "CloudfrontOac",
                        "path": "root/Default/Website/Website-host/CloudfrontOac",
                      },
                      "Distribution": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Distribution",
                        "path": "root/Default/Website/Website-host/Distribution",
                      },
                      "DistributionS3BucketPolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "DistributionS3BucketPolicy",
                        "path": "root/Default/Website/Website-host/DistributionS3BucketPolicy",
                      },
                      "File--index.html": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File--index.html",
                        "path": "root/Default/Website/Website-host/File--index.html",
                      },
                      "File-wing.js": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File-wing.js",
                        "path": "root/Default/Website/Website-host/File-wing.js",
                      },
                      "Route53Record": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Route53Record",
                        "path": "root/Default/Website/Website-host/Route53Record",
                      },
                      "WebsiteBucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "WebsiteBucket",
                        "path": "root/Default/Website/Website-host/WebsiteBucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A static website",
                      "title": "Website",
                    },
                    "id": "Website-host",
                    "path": "root/Default/Website/Website-host",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A deployable React App",
                  "title": "React App",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`cloud.Domain for tf-aws > react website with a domain when passing values on the command line 1`] = `
{
  "data": {
    "aws_iam_policy_document": {
      "Website_Website-host_AllowDistributionReadOnly_BEA9DA33": {
        "statement": [
          {
            "actions": [
              "s3:GetObject",
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "\${aws_cloudfront_distribution.Website_Website-host_Distribution_16BBCB7A.arn}",
                ],
                "variable": "AWS:SourceArn",
              },
            ],
            "principals": [
              {
                "identifiers": [
                  "cloudfront.amazonaws.com",
                ],
                "type": "Service",
              },
            ],
            "resources": [
              "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.arn}/*",
            ],
          },
        ],
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "Website_Website-host_Distribution_16BBCB7A": {
        "aliases": [
          "www.example.com",
        ],
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD",
          ],
          "cached_methods": [
            "GET",
            "HEAD",
          ],
          "compress": true,
          "default_ttl": 3600,
          "forwarded_values": {
            "cookies": {
              "forward": "none",
            },
            "query_string": false,
          },
          "max_ttl": 86400,
          "min_ttl": 0,
          "target_origin_id": "s3Origin",
          "viewer_protocol_policy": "redirect-to-https",
        },
        "default_root_object": "index.html",
        "enabled": true,
        "origin": [
          {
            "domain_name": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket_regional_domain_name}",
            "origin_access_control_id": "\${aws_cloudfront_origin_access_control.Website_Website-host_CloudfrontOac_E7FC4CB7.id}",
            "origin_id": "s3Origin",
          },
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [],
            "restriction_type": "none",
          },
        },
        "viewer_certificate": {
          "acm_certificate_arn": "arn:aws:acm:us-east-1:111111111111:certificate/aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
          "cloudfront_default_certificate": true,
          "ssl_support_method": "sni-only",
        },
      },
    },
    "aws_cloudfront_origin_access_control": {
      "Website_Website-host_CloudfrontOac_E7FC4CB7": {
        "name": "Website--c8d109e4-cloudfront-oac",
        "origin_access_control_origin_type": "s3",
        "signing_behavior": "always",
        "signing_protocol": "sigv4",
      },
    },
    "aws_route53_record": {
      "Website_Website-host_Route53Record_CC3DD5F0": {
        "alias": {
          "evaluate_target_health": false,
          "name": "\${aws_cloudfront_distribution.Website_Website-host_Distribution_16BBCB7A.domain_name}",
          "zone_id": "\${aws_cloudfront_distribution.Website_Website-host_Distribution_16BBCB7A.hosted_zone_id}",
        },
        "name": "www.example.com",
        "type": "A",
        "zone_id": "Z0111111111111111111F",
      },
    },
    "aws_s3_bucket": {
      "Website_Website-host_WebsiteBucket_0ECE7584": {
        "bucket_prefix": "website-host-c8d109e4-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "Website_Website-host_DistributionS3BucketPolicy_AE0CA9BB": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.id}",
        "policy": "\${data.aws_iam_policy_document.Website_Website-host_AllowDistributionReadOnly_BEA9DA33.json}",
      },
    },
    "aws_s3_bucket_website_configuration": {
      "Website_Website-host_BucketWebsiteConfiguration_6A151F57": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket}",
        "index_document": {
          "suffix": "index.html",
        },
      },
    },
    "aws_s3_object": {
      "Website_Website-host_File--indexhtml_7EB8DC7E": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584",
        ],
        "key": "/index.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_Website-host_File-wingjs_CC553473": {
        "bucket": "\${aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584.bucket}",
        "content": "// This file is generated by wing
window.wingEnv = {};",
        "content_type": "text/javascript",
        "depends_on": [
          "aws_s3_bucket.Website_Website-host_WebsiteBucket_0ECE7584",
        ],
        "key": "wing.js",
      },
    },
  },
}
`;

exports[`cloud.Domain for tf-aws > react website with a domain when passing values on the command line 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Domain": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud domain",
                  "title": "Domain",
                },
                "id": "Domain",
                "path": "root/Default/Domain",
              },
              "Website": {
                "children": {
                  "Website-host": {
                    "children": {
                      "AllowDistributionReadOnly": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformDataSource",
                          "version": "0.17.0",
                        },
                        "id": "AllowDistributionReadOnly",
                        "path": "root/Default/Website/Website-host/AllowDistributionReadOnly",
                      },
                      "BucketWebsiteConfiguration": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "BucketWebsiteConfiguration",
                        "path": "root/Default/Website/Website-host/BucketWebsiteConfiguration",
                      },
                      "CloudfrontOac": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "CloudfrontOac",
                        "path": "root/Default/Website/Website-host/CloudfrontOac",
                      },
                      "Distribution": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Distribution",
                        "path": "root/Default/Website/Website-host/Distribution",
                      },
                      "DistributionS3BucketPolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "DistributionS3BucketPolicy",
                        "path": "root/Default/Website/Website-host/DistributionS3BucketPolicy",
                      },
                      "File--index.html": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File--index.html",
                        "path": "root/Default/Website/Website-host/File--index.html",
                      },
                      "File-wing.js": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "File-wing.js",
                        "path": "root/Default/Website/Website-host/File-wing.js",
                      },
                      "Route53Record": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Route53Record",
                        "path": "root/Default/Website/Website-host/Route53Record",
                      },
                      "WebsiteBucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "WebsiteBucket",
                        "path": "root/Default/Website/Website-host/WebsiteBucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A static website",
                      "title": "Website",
                    },
                    "id": "Website-host",
                    "path": "root/Default/Website/Website-host",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A deployable React App",
                  "title": "React App",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`cloud.Domain for tf-aws > website with a domain when passing values from file 1`] = `
{
  "data": {
    "aws_iam_policy_document": {
      "Website_AllowDistributionReadOnly_24CFF6C0": {
        "statement": [
          {
            "actions": [
              "s3:GetObject",
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "\${aws_cloudfront_distribution.Website_Distribution_5E840E42.arn}",
                ],
                "variable": "AWS:SourceArn",
              },
            ],
            "principals": [
              {
                "identifiers": [
                  "cloudfront.amazonaws.com",
                ],
                "type": "Service",
              },
            ],
            "resources": [
              "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.arn}/*",
            ],
          },
        ],
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "Website_Distribution_5E840E42": {
        "aliases": [
          "www.example.com",
        ],
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD",
          ],
          "cached_methods": [
            "GET",
            "HEAD",
          ],
          "compress": true,
          "default_ttl": 3600,
          "forwarded_values": {
            "cookies": {
              "forward": "none",
            },
            "query_string": false,
          },
          "max_ttl": 86400,
          "min_ttl": 0,
          "target_origin_id": "s3Origin",
          "viewer_protocol_policy": "redirect-to-https",
        },
        "default_root_object": "index.html",
        "enabled": true,
        "origin": [
          {
            "domain_name": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket_regional_domain_name}",
            "origin_access_control_id": "\${aws_cloudfront_origin_access_control.Website_CloudfrontOac_756836A4.id}",
            "origin_id": "s3Origin",
          },
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [],
            "restriction_type": "none",
          },
        },
        "viewer_certificate": {
          "acm_certificate_arn": "arn:aws:acm:us-east-1:111111111111:certificate/aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
          "cloudfront_default_certificate": true,
          "ssl_support_method": "sni-only",
        },
      },
    },
    "aws_cloudfront_origin_access_control": {
      "Website_CloudfrontOac_756836A4": {
        "name": "Website-c80d509a-cloudfront-oac",
        "origin_access_control_origin_type": "s3",
        "signing_behavior": "always",
        "signing_protocol": "sigv4",
      },
    },
    "aws_route53_record": {
      "Website_Route53Record_BE729446": {
        "alias": {
          "evaluate_target_health": false,
          "name": "\${aws_cloudfront_distribution.Website_Distribution_5E840E42.domain_name}",
          "zone_id": "\${aws_cloudfront_distribution.Website_Distribution_5E840E42.hosted_zone_id}",
        },
        "name": "www.example.com",
        "type": "A",
        "zone_id": "Z0111111111111111111F",
      },
    },
    "aws_s3_bucket": {
      "Website_WebsiteBucket_3C0321F0": {
        "bucket_prefix": "website-c80d509a-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "Website_DistributionS3BucketPolicy_09AE0BCA": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.id}",
        "policy": "\${data.aws_iam_policy_document.Website_AllowDistributionReadOnly_24CFF6C0.json}",
      },
    },
    "aws_s3_bucket_website_configuration": {
      "Website_BucketWebsiteConfiguration_58F891B4": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "index_document": {
          "suffix": "index.html",
        },
      },
    },
    "aws_s3_object": {
      "Website_File--bhtml_6ACC0793": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_WebsiteBucket_3C0321F0",
        ],
        "key": "/b.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_File--indexhtml_864F8C36": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_WebsiteBucket_3C0321F0",
        ],
        "key": "/index.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_File--inner-folder--ahtml_7D20A7EF": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_WebsiteBucket_3C0321F0",
        ],
        "key": "/inner-folder/a.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
    },
  },
}
`;

exports[`cloud.Domain for tf-aws > website with a domain when passing values from file 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Domain": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud domain",
                  "title": "Domain",
                },
                "id": "Domain",
                "path": "root/Default/Domain",
              },
              "Website": {
                "children": {
                  "AllowDistributionReadOnly": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformDataSource",
                      "version": "0.17.0",
                    },
                    "id": "AllowDistributionReadOnly",
                    "path": "root/Default/Website/AllowDistributionReadOnly",
                  },
                  "BucketWebsiteConfiguration": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "BucketWebsiteConfiguration",
                    "path": "root/Default/Website/BucketWebsiteConfiguration",
                  },
                  "CloudfrontOac": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudfrontOac",
                    "path": "root/Default/Website/CloudfrontOac",
                  },
                  "Distribution": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Distribution",
                    "path": "root/Default/Website/Distribution",
                  },
                  "DistributionS3BucketPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "DistributionS3BucketPolicy",
                    "path": "root/Default/Website/DistributionS3BucketPolicy",
                  },
                  "File--b.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--b.html",
                    "path": "root/Default/Website/File--b.html",
                  },
                  "File--index.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--index.html",
                    "path": "root/Default/Website/File--index.html",
                  },
                  "File--inner-folder--a.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--inner-folder--a.html",
                    "path": "root/Default/Website/File--inner-folder--a.html",
                  },
                  "Route53Record": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Route53Record",
                    "path": "root/Default/Website/Route53Record",
                  },
                  "WebsiteBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "WebsiteBucket",
                    "path": "root/Default/Website/WebsiteBucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A static website",
                  "title": "Website",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`cloud.Domain for tf-aws > website with a domain when passing values on the command line 1`] = `
{
  "data": {
    "aws_iam_policy_document": {
      "Website_AllowDistributionReadOnly_24CFF6C0": {
        "statement": [
          {
            "actions": [
              "s3:GetObject",
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "\${aws_cloudfront_distribution.Website_Distribution_5E840E42.arn}",
                ],
                "variable": "AWS:SourceArn",
              },
            ],
            "principals": [
              {
                "identifiers": [
                  "cloudfront.amazonaws.com",
                ],
                "type": "Service",
              },
            ],
            "resources": [
              "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.arn}/*",
            ],
          },
        ],
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "Website_Distribution_5E840E42": {
        "aliases": [
          "www.example.com",
        ],
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD",
          ],
          "cached_methods": [
            "GET",
            "HEAD",
          ],
          "compress": true,
          "default_ttl": 3600,
          "forwarded_values": {
            "cookies": {
              "forward": "none",
            },
            "query_string": false,
          },
          "max_ttl": 86400,
          "min_ttl": 0,
          "target_origin_id": "s3Origin",
          "viewer_protocol_policy": "redirect-to-https",
        },
        "default_root_object": "index.html",
        "enabled": true,
        "origin": [
          {
            "domain_name": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket_regional_domain_name}",
            "origin_access_control_id": "\${aws_cloudfront_origin_access_control.Website_CloudfrontOac_756836A4.id}",
            "origin_id": "s3Origin",
          },
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [],
            "restriction_type": "none",
          },
        },
        "viewer_certificate": {
          "acm_certificate_arn": "arn:aws:acm:us-east-1:111111111111:certificate/aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
          "cloudfront_default_certificate": true,
          "ssl_support_method": "sni-only",
        },
      },
    },
    "aws_cloudfront_origin_access_control": {
      "Website_CloudfrontOac_756836A4": {
        "name": "Website-c80d509a-cloudfront-oac",
        "origin_access_control_origin_type": "s3",
        "signing_behavior": "always",
        "signing_protocol": "sigv4",
      },
    },
    "aws_route53_record": {
      "Website_Route53Record_BE729446": {
        "alias": {
          "evaluate_target_health": false,
          "name": "\${aws_cloudfront_distribution.Website_Distribution_5E840E42.domain_name}",
          "zone_id": "\${aws_cloudfront_distribution.Website_Distribution_5E840E42.hosted_zone_id}",
        },
        "name": "www.example.com",
        "type": "A",
        "zone_id": "Z0111111111111111111F",
      },
    },
    "aws_s3_bucket": {
      "Website_WebsiteBucket_3C0321F0": {
        "bucket_prefix": "website-c80d509a-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "Website_DistributionS3BucketPolicy_09AE0BCA": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.id}",
        "policy": "\${data.aws_iam_policy_document.Website_AllowDistributionReadOnly_24CFF6C0.json}",
      },
    },
    "aws_s3_bucket_website_configuration": {
      "Website_BucketWebsiteConfiguration_58F891B4": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "index_document": {
          "suffix": "index.html",
        },
      },
    },
    "aws_s3_object": {
      "Website_File--bhtml_6ACC0793": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_WebsiteBucket_3C0321F0",
        ],
        "key": "/b.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_File--indexhtml_864F8C36": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_WebsiteBucket_3C0321F0",
        ],
        "key": "/index.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
      "Website_File--inner-folder--ahtml_7D20A7EF": {
        "bucket": "\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "aws_s3_bucket.Website_WebsiteBucket_3C0321F0",
        ],
        "key": "/inner-folder/a.html",
        "source": "<source>",
        "source_hash": "\${filemd5(<source>)}",
      },
    },
  },
}
`;

exports[`cloud.Domain for tf-aws > website with a domain when passing values on the command line 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Domain": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud domain",
                  "title": "Domain",
                },
                "id": "Domain",
                "path": "root/Default/Domain",
              },
              "Website": {
                "children": {
                  "AllowDistributionReadOnly": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformDataSource",
                      "version": "0.17.0",
                    },
                    "id": "AllowDistributionReadOnly",
                    "path": "root/Default/Website/AllowDistributionReadOnly",
                  },
                  "BucketWebsiteConfiguration": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "BucketWebsiteConfiguration",
                    "path": "root/Default/Website/BucketWebsiteConfiguration",
                  },
                  "CloudfrontOac": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudfrontOac",
                    "path": "root/Default/Website/CloudfrontOac",
                  },
                  "Distribution": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Distribution",
                    "path": "root/Default/Website/Distribution",
                  },
                  "DistributionS3BucketPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "DistributionS3BucketPolicy",
                    "path": "root/Default/Website/DistributionS3BucketPolicy",
                  },
                  "File--b.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--b.html",
                    "path": "root/Default/Website/File--b.html",
                  },
                  "File--index.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--index.html",
                    "path": "root/Default/Website/File--index.html",
                  },
                  "File--inner-folder--a.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--inner-folder--a.html",
                    "path": "root/Default/Website/File--inner-folder--a.html",
                  },
                  "Route53Record": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Route53Record",
                    "path": "root/Default/Website/Route53Record",
                  },
                  "WebsiteBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "WebsiteBucket",
                    "path": "root/Default/Website/WebsiteBucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A static website",
                  "title": "Website",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
